--- a/lang/fr.json
+++ b/lang/fr.json
@@ -617,7 +617,8 @@
   "field_work_temp": "Température",
   "field_observations": "Observations",
   "field_paid": "Payé",
-  "field_data_sent": "Données envoyées"
+  "field_data_sent": "Données envoyées",
+  "th_color": "Couleur"
 
 
 
